--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
         <h1 id="page-heading">
             TODO APP
         </h1>
-        <form action="">
+        <form action="/form">
             <div id="todo-list">
                 <div id="discription">
                     <p id="title-desc">DESCRIPTION</p>
@@ -38,11 +38,11 @@
                 </div>
                 <!-- buttons part clear -->
                 <div>
-                    <button id="add">
+                    <button id="add" type="submit">
                         <i class="fas fa-plus fa-solid"></i>
                         ADD TASK
                     </button>
-                    <button id="delete">
+                    <button id="delete" type="submit">
                         <i class="fas fa-trash fa-sharp fa-solid"></i>
                         DELETE TASKS
                     </button>
